Donate Now section

--- a/index.html
+++ b/index.html
@@ -1,13 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./style.cssg">
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="./style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <!--banner starts-->
+
+    <section id="banner">
+      <div id="banner-overlay">
+        <h1>Emergency Aid: Sylhet Flood</h1>
+        <p>
+          Bangladesh has been hit with the worst flooding in 100 years.
+          Thousands of children are at risk, threatened by a high risk of
+          drowning, disease, and malnutrition. More than 36,000 children are
+          crowded into emergency flood shelters. Families and children are
+          trapped at home waiting for boats to bring relief. Roads and homes
+          have been submerged, power stations are down, and over 380 schools
+          have been closed or impacted.
+        </p>
+        <a href="#">Donate Now</a>
+      </div>
+    </section>
+
+    <!--banner ends-->
+
+    <!--donate today starts-->
+
+    <section id="donate-today">
+      <h1>Donate Today</h1>
+      <p class="sub-title">
+        Your donation can help UNICEF supply water and sanitation kits,
+        including soap, water purification tablets, jerry cans, sanitary
+        napkins, and buckets, to ensure that children and their families have
+        access to clean water and hygiene items during and after the floods
+      </p>
+      <div class="row">
+        <p class="amount-text">100tk</p>
+        <p class="amount-text">200tk</p>
+        <p class="amount-text">500tk</p>
+        <p class="amount-text">1000tk</p>
+        <p class="amount-text">5000tk</p>
+      </div>
+
+      <input type="text" placeholder="Other Amount (Taka)">
+      <hr>
+    </section>
+
+    <!--donate today ends-->
+  </body>
 </html>
