--- a/index.html
+++ b/index.html
@@ -52,10 +52,97 @@
         <p class="amount-text">5000tk</p>
       </div>
 
-      <input type="text" placeholder="Other Amount (Taka)">
-      <hr>
+      <input type="text" placeholder="Other Amount (Taka)" />
+      <hr />
+      <a href="#">Donate Now</a>
     </section>
 
     <!--donate today ends-->
+
+    <!--donate plan starts-->
+
+    <section id="donate-plan">
+      <h1>Our Donate Plan</h1>
+      <p class="sub-title">
+        Your donation ensures our emergency relief response, including efforts
+        for safe and clean water to prevent diarrhea and water-borne disease
+      </p>
+      <div class="flex">
+        <div class="col">
+          <img src="./icons/food.png" alt="" />
+          <h3>Food for a family</h3>
+          <p>Say goodbye to hunger</p>
+        </div>
+        <div class="col">
+          <img src="./icons/food.png" alt="" />
+          <h3>Shelter for a family</h3>
+          <p>Say goodbye to hunger</p>
+        </div>
+        <div class="col">
+          <img src="./icons/food.png" alt="" />
+          <h3>Education for a family</h3>
+          <p>Say goodbye to hunger</p>
+        </div>
+      </div>
+    </section>
+
+    <!--donate plan ends-->
+
+    <!--contribute-1 starts-->
+    <section id="contribute-1" class="flex">
+      <div class="half-width">
+        <h1>
+          No More Homeless <br />
+          No More Hunger
+        </h1>
+        <p>
+          Your donation can help UNICEF supply water and sanitation kits,
+          including soap, water purification tablets, jerry cans, sanitary
+          napkins, and buckets, to ensure that children and their families have
+          access to clean water and hygiene items during and after the floods
+        </p>
+        <a href="#">How To Contribute?</a>
+      </div>
+      <div class="half-width">
+          <img src="./images/donation13.jpg" alt="">
+      </div>
+    </section>
+    <!--contribute-1 ends-->
+
+    <!--contribute-1 starts-->
+    <section id="contribute-2" class="flex">
+        <div class="half-width">
+            <img src="./images/donation11.jpg" alt="">
+        </div>
+        <div class="half-width">
+            <h1>
+              No More Homeless <br />
+              No More Hunger
+            </h1>
+            <p>
+              Your donation can help UNICEF supply water and sanitation kits,
+              including soap, water purification tablets, jerry cans, sanitary
+              napkins, and buckets, to ensure that children and their families have
+              access to clean water and hygiene items during and after the floods
+            </p>
+            <a href="#">How To Contribute?</a>
+          </div>
+      </section>
+      <!--contribute-1 ends-->
+
+      <!--contact-->
+
+      <section id="contact">
+          <h1>Get My Updates</h1>
+          <p>Call us for more details</p>
+          <div class="contact-box">
+              <input type="text" placeholder="Enter your email">
+              <button>Submit</button>
+
+          </div>
+      </section>
+
+      </>
+
   </body>
 </html>
