--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
         </div>
         <div class="half-width">
             <h1>
-              No More Homeless <br />
-              No More Hunger
+              Your Help <br />
+              Can Save Lives
             </h1>
             <p>
               Your donation can help UNICEF supply water and sanitation kits,
@@ -129,6 +129,18 @@
           </div>
       </section>
       <!--contribute-1 ends-->
+
+      <!--our partners-->
+
+      <section id="partner">
+          <h1>Our Partners</h1>
+          <p>Join 25,788 charity organisations</p>
+          <div class="row">
+            <img src="./images/download.png" alt="">
+            <img src="./images/download (1).png" alt="">
+          </div>
+          <h1>Join </h1>
+      </section>
 
       <!--contact-->
 
@@ -142,7 +154,6 @@
           </div>
       </section>
 
-      </>
 
   </body>
 </html>
