--- a/index.html
+++ b/index.html
@@ -139,7 +139,6 @@
             <img src="./images/download.png" alt="">
             <img src="./images/download (1).png" alt="">
           </div>
-          <h1>Join </h1>
       </section>
 
       <!--contact-->
@@ -152,6 +151,14 @@
               <button>Submit</button>
 
           </div>
+      </section>
+
+
+      <!--footer -->
+
+      <section id="footer">
+          <h1>Be humble</h1>
+          <p>I'm gonna do it!</p>
       </section>
 
 
